<resources>
    <string name="app_name">SimpleWeatherWidget</string>
    <string name="ads_unit">ca-app-pub-4661993230678675/2719216945</string>

    <string name="detail">Detail</string>

    //Common button
    <string name="confirm">OK, sure</string>
    <string name="decline">No</string>

    //Permission Request Alert Dialog
    <string name="permission_request_title">Permission Request</string>
    <string name="permission_request_content">For acquiring weather forecasts precisely,
        we need to know your location.
        Your location airQualityData will be used for getting weather forecast ONLY. </string>
    <string name="make_decision">Go and make decision</string>

    <string name="location_preference">location preference</string>
    <string name="allow_getting_location_preference">allow getting location</string>

    <string name="query_weather">query weather</string>
    <string name="remote_view_ids">remote_view_ids</string>

    <string name="max">max</string>
    <string name="min">min</string>

    //Weather detail card
    <string name="uv">UV</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_direction">Wind direction</string>
    <string name="snow_in_3_hour">Snow</string>
    <string name="rain_in_3_hour">Rain</string>

    <string name="percentage_sign"> %</string>

    <string name="meter_per_second">meter/second</string>
    <string name="mile_per_hour">mile/hour</string>

    <string name="east">East</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="date_format">"dd , MMM , YYYY z"</string>

    //Week day titles
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    //Menu
    <string name="setting">Setting</string>
    
    //setting
    <string name="unit_setting">Unit Setting</string>

    <string name="temperature_unit_setting">temperature unit</string>
    <string name="celsius">celsius</string>
    <string name="fahrenheit">fahrenheit</string>
    
    <string name="wind_speed_unit_setting">wind speed unit</string>
    <string name="mile_hour">mile / hour</string>
    <string name="meter_second">meter / second</string>

    <array name="temperature_units">
        <item name="celsius">celsius</item>
        <item name="fahrenheit">fahrenheit</item>
    </array>
    <array name="wind_speed_units">
        <item name="mile_hour">mile/hour</item>
        <item name="meter_second">meter/second</item>
    </array>

    //progress dialog message
    <string name="refreshing_data">Checking newest weather info…</string>
    
    //Air quality Description
    <string name="air_quality_label">Air Quality</string>

    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="unhealthy_for_sensitive_groups">Unhealthy for Sensitive Groups</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="very_unhealthy">Very Unhealthy</string>
    <string name="hazardous">Hazardous</string>

    //Pollutant

    <string name="co">Carbon monoxide</string>
    <string name="co2">Carbon dioxide</string>
    <string name="so2">Sulfur dioxide</string>
    <string name="o3">Ozone</string>
    <string name="no2">Nitrogen dioxide</string>
    <string name="pm2.5">Particulate Matter 2.5</string>
    <string name="pm10">Particulate Matter 10</string>



</resources>
